--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Set Poetry config
         run: |
-          poetry config settings.virtualenvs.in-project false
+          poetry config virtualenvs.in-project true
           poetry config settings.virtualenvs.path ~/.virtualenvs
 
       - name: Install Dependencies
